--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.2
+  provider: ^6.1.1
+  go_router: ^13.1.0
   table_calendar: ^3.0.9
-  cupertino_icons: ^1.0.8
-  go_router: ^13.0.0
 
 dev_dependencies:
   flutter_test:
