feat: add workout details screen and active workout flow with navigation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
 
-flutter:
+flutter: # This is the single, correct flutter block
   uses-material-design: true
+  assets:
+    - assets/images/
