--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,14 @@ dependencies:
   provider: ^6.1.1
   go_router: ^13.1.0
   table_calendar: ^3.0.9
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
 
-flutter: # This is the single, correct flutter block
+flutter:
   uses-material-design: true
   assets:
     - assets/images/
